--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -21,6 +21,12 @@ malory:
   activated: true
   activated_at: <%= Time.zone.now %>
 
+anderson:
+  name: anderson rays
+  email: anderson@example.gov
+  password_digest: <%= User.digest('password') %>
+  activated: false
+
 <% 30.times do |n| %>
 user_<%= n %>:
   name: <%= "User #{n}" %>
